name:                svm-simple
version:             0.0.1
synopsis:            Medium level, simplified, bindings to libsvm
description:
  Simplified bindings to libsvm <http://www.csie.ntu.edu.tw/~cjlin/libsvm/>.
  The aim of this package is to make as easy to use bindings for libsvm as
  possible. (But we are not yet there)
  Changes in version 0.0.1
  .
  * Initial version
  .
license:             BSD3
license-file:        LICENSE
author:              Paulo Tanimoto <ptanimoto@gmail.com>
                     Ville Tirronen <aleator@gmail.com>
maintainer:          Paulo Tanimoto <ptanimoto@gmail.com>
                     Ville Tirronen <aleator@gmail.com>
homepage:            http://github.com/aleator/Simple-SVM
bug-reports:         http://github.com/aleator/Simple-SVM/issues
category:            AI, Pattern Classification, Algorithms, Support Vector Machine

build-type:          Simple
cabal-version:       >= 1.8
  
extra-source-files:
    Examples/SmokeTest.hs

library
    AI.SVM.Simple
  build-depends:
    base         >= 4   && < 5,
    bindings-svm >= 0.2.0 && < 0.3
